--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
 	"name": "openapi-query-client",
+	"license": "MIT",
 	"version": "0.0.0",
 	"type": "module",
+	"homepage": "https://github.com/screfy/openapi-query-client#readme",
+	"author": "screfy <screfy@pm.me> (https://screfy.com)",
+	"repository": "github:screfy/openapi-query-client",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"sideEffects": false,
@@ -18,6 +22,12 @@
 		"typecheck": "tsc --noEmit",
 		"check-exports": "attw --pack ."
 	},
+	"bugs": {
+		"url": "https://github.com/screfy/openapi-query-client/issues"
+	},
+	"files": [
+		"dist"
+	],
 	"dependencies": {
 		"@tanstack/react-query": "^5.64.2",
 		"react": "^19.0.0",
